# plugins-workspace

./: .taurignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  renovate.json
.changes/: add-fs-size.md  add-global-updater-version-comparator.md  add-total-transferred-field.md  add-transfer-speed.md  bump-all-same-minor.md  change-pr-2224.md  config.json  deb-update-support.md  feat-download-on-post.md  fix-1985.md  fix-clipboard-html-write.md  fix-deep-link-onopenurl-current.md  fix-dialog-export-dialog.md  fix-fs-build.md  fix-fs-scope-escape-paths.md  fix-inconsistent-webview-log-target.md  fix-opener-android-packagename.md  fix-opener-ios-fn-name.md  fix-sql-blocking.md  fs-read-dir-broken-symlink.md  http-tracing.md  localhost-custom-host-binding.md  log-caller-location-throw.md  log-update-fern.md  opener-initial.md  positioner-move-window-constrained-js.md  positioner-move-window-constrained.md  sql-allow-blocking-without-nested-runtime.md  window-state-disable-maximize-check.md
.github/workflows/: check-generated-files.yml  test-rust.yml
.scripts/ci/: check-change-files.js
examples/api/: CHANGELOG.md  package.json
plugins/autostart/: CHANGELOG.md  Cargo.toml  README.md  package.json
plugins/barcode-scanner/: Cargo.toml
plugins/biometric/: CHANGELOG.md  Cargo.toml  README.md  package.json
plugins/cli/: CHANGELOG.md  Cargo.toml  README.md  package.json
plugins/clipboard-manager/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  package.json
plugins/deep-link/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  package.json
plugins/dialog/: CHANGELOG.md  Cargo.toml  package.json
plugins/fs/: CHANGELOG.md  Cargo.toml  api-iife.js  build.rs  package.json
plugins/geolocation/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  package.json
plugins/global-shortcut/: CHANGELOG.md  Cargo.toml  api-iife.js  (+1 more)
plugins/opener/: CHANGELOG.md  Cargo.toml  README.md  package.json
plugins/opener/android/src/main/java/: OpenerPlugin.kt
plugins/opener/guest-js/: index.ts  init.ts
plugins/opener/ios/Sources/: OpenerPlugin.swift
plugins/opener/src/: commands.rs  lib.rs  open.rs  reveal_item_in_dir.rs
(+130 files in other folders)
